==> qinkangli/GRBLApplication/激光雕刻机/参考资料/移植好的CNC 源码/GCode/stepper.c <==
#include "STM32F10x.h"
#include "stm32f10x_tim.h"
#include "stm32f10x_exti.h"
#include "stm32f10x_gpio.h"
#include "stm32f10x_rcc.h"
#include "misc.h"
#include "stepper.h"
#include "Grbl_config.h"
#include "settings.h"
#include "planner.h"
#include <stdint.h>
#include "cnc.h"
#define F_CPU 4000000L
#define TICKS_PER_MICROSECOND (F_CPU/1000000)
#define CYCLES_PER_ACCELERATION_TICK ((TICKS_PER_MICROSECOND*1000000)/ACCELERATION_TICKS_PER_SECOND)

void st_wake_up() 
{
  // Enable steppers by resetting the stepper disable port
	MotorsEnable(0x07);
  if (sys.state == STATE_CYCLE) {
    // Initialize stepper output bits
    out_bits = (0) ^ (settings.invert_mask); 
    // Initialize step pulse timing from settings. Here to ensure updating after re-writing.
      // Set step pulse time. Ad hoc computation from oscilloscope. Uses two's complement.
		
//    step_pulse_time = -(((settings.pulse_microseconds-2)*TICKS_PER_MICROSECOND) >> 3);		//snil
		
    // Enable stepper driver interrupt
    NVIC_EnableIRQ (TIM2_IRQn);  
		NVIC_SetPriority(TIM2_IRQn, 0);
		ShowPos = 1;
  }
}

void st_go_idle() 
{
  // Disable stepper driver interrupt
	printpos_grbl(0,480);
	ShowPos = 0;
  NVIC_DisableIRQ (TIM2_IRQn); 
//	beep(10);
  // Disable steppers only upon system alarm activated or by user setting to not be kept enabled.
  if ((settings.stepper_idle_lock_time != 0xff) || bit_istrue(sys.execute,EXEC_ALARM)) {
    // Force stepper dwell to lock axes for a defined amount of time to ensure the axes come to a complete
    // stop and not drift from residual inertial forces at the end of the last movement.
    _delay_ms(settings.stepper_idle_lock_time);
    if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) 
		{ 
//      STEPPERS_DISABLE_PORT &= ~(1<<STEPPERS_DISABLE_BIT); //snail
    } 
		else 
		{ 
 //     STEPPERS_DISABLE_PORT |= (1<<STEPPERS_DISABLE_BIT); 
    }   
  }
//	DebugPf("\r\n");
}

void st_init()
{
		EXTI_InitTypeDef   EXTI_InitStructure;
		NVIC_InitTypeDef   NVIC_InitStructure;
	
    RCC->APB1ENR |= RCC_APB1ENR_TIM2EN;                     // enable clock for TIM2

		TIM2->PSC = 0;                            // set prescaler
		TIM2->ARR = 1000;												  // set auto-reload
		TIM2->CR1 = 0;                            // reset command register 1
		TIM2->CR2 = 0;                            // reset command register 2
		TIM2->DIER = (1<<0);                      // Update interrupt enabled
		TIM2->CR1 |= (1<<0);                      // Enable Timer


		NVIC_InitStructure.NVIC_IRQChannel = TIM2_IRQn;			     		//选择定时器2中断线
		NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;		 //抢占优先级为1
		NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;			 		//响应优先级为0
		NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;				 			//使能中断通道
		NVIC_Init(&NVIC_InitStructure);								 
		
//		DoOutPort(0,0x03);	
//		GPIO_EXTILineConfig(GPIO_PortSourceGPIOE, GPIO_PinSource4);
//		EXTI_InitStructure.EXTI_Line = EXTI_Line4;
//		EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
//		EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;
//		EXTI_InitStructure.EXTI_LineCmd = ENABLE;
//		EXTI_Init(&EXTI_InitStructure);

//		NVIC_InitStructure.NVIC_IRQChannel = EXTI4_IRQn;
//		NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x0F;
//		NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x0F;
//		NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;

//		NVIC_Init(&NVIC_InitStructure);
//		NVIC_SetPriority(EXTI4_IRQn, 3);


  st_wake_up();
  st_go_idle();
}
