==> RoelandK/GRBL_LM4F120H5QR/stepper.c <==
#include "inc/hw_ints.h"
#include "driverlib/interrupt.h"
#include "driverlib/sysctl.h"
#include "driverlib/timer.h"
#include "stepper.h"
#include "config.h"
#include "settings.h"
#include "planner.h"
#define TICKS_PER_MICROSECOND (F_CPU/1000000)
#define CYCLES_PER_ACCELERATION_TICK (F_CPU/ACCELERATION_TICKS_PER_SECOND)

void st_wake_up()
{
  // Enable steppers by resetting the stepper disable port
  if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) {
///    STEPPERS_DISABLE_PORT |= (1<<STEPPERS_DISABLE_BIT);
    GPIOPinWrite( STEPPERS_DISABLE_PORT, STEPPERS_DISABLE_BIT, 0xFF );
  } else {
///    STEPPERS_DISABLE_PORT &= ~(1<<STEPPERS_DISABLE_BIT);
    GPIOPinWrite( STEPPERS_DISABLE_PORT, STEPPERS_DISABLE_BIT, 0x00 );
  }
  if (sys.state == STATE_CYCLE) {
    // Initialize stepper output bits
    out_bits = (0) ^ (settings.invert_mask);
    // Initialize step pulse timing from settings. Here to ensure updating after re-writing.
    #ifdef STEP_PULSE_DELAY
      // Set total step pulse time after direction pin set. Ad hoc computation from oscilloscope.
      step_pulse_time = -(((settings.pulse_microseconds+STEP_PULSE_DELAY-2)*TICKS_PER_MICROSECOND) >> 3);
      // Set delay between direction pin write and step command.
///todo      OCR2A = -(((settings.pulse_microseconds)*TICKS_PER_MICROSECOND) >> 3);
    #else // Normal operation
      // Set step pulse time. Ad hoc computation from oscilloscope. Uses two's complement.
      step_pulse_time = -(((settings.pulse_microseconds-2)*TICKS_PER_MICROSECOND) >> 3);
    #endif
    // Enable stepper driver interrupt
///todo    TIMSK1 |= (1<<OCIE1A);
  }
}

void st_go_idle()
{
  // Disable stepper driver interrupt
///todo  TIMSK1 &= ~(1<<OCIE1A); ///Disable bit 'Timer/Counter1, Output Compare A Match Interrupt Enable' in interrupt mask register
  // Disable steppers only upon system alarm activated or by user setting to not be kept enabled.
  if ((settings.stepper_idle_lock_time != 0xff) || bit_istrue(sys.execute,EXEC_ALARM)) {
    // Force stepper dwell to lock axes for a defined amount of time to ensure the axes come to a complete
    // stop and not drift from residual inertial forces at the end of the last movement.
    delay_ms(settings.stepper_idle_lock_time);
    if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) {
///      STEPPERS_DISABLE_PORT &= ~(1<<STEPPERS_DISABLE_BIT);
      GPIOPinWrite( STEPPERS_DISABLE_PORT, STEPPERS_DISABLE_BIT, 0 );
    } else {
///      STEPPERS_DISABLE_PORT |= (1<<STEPPERS_DISABLE_BIT);
      GPIOPinWrite( STEPPERS_DISABLE_PORT, STEPPERS_DISABLE_BIT, 0xFF );
    }
  }
}

void st_init()
{
  // Configure directions of interface pins
///  STEPPING_DDR |= STEPPING_MASK;
  SysCtlPeripheralEnable( STEPPING_SYSCTL_PERIPH );
  GPIOPinTypeGPIOOutput( STEPPING_PORT, STEPPING_MASK );
///  STEPPING_PORT = (STEPPING_PORT & ~STEPPING_MASK) | settings.invert_mask;
  GPIOPinWrite( STEPPING_PORT, STEPPING_MASK, settings.invert_mask );
///  STEPPERS_DISABLE_DDR |= 1<<STEPPERS_DISABLE_BIT;
  SysCtlPeripheralEnable( STEPPERS_DISABLE_SYSCTL_PERIPH );
  GPIOPinTypeGPIOOutput( STEPPERS_DISABLE_PORT, 1<<STEPPERS_DISABLE_BIT );

/* todo
  // waveform generation = 0100 = CTC
  /// Timer1 (16 bit) mode:
  /// CTC - Clear Timer on Compare
  /// Maximum reachable value = OCR1A
  /// TOV1 flag is set (interrupt occurs) on max value (OCR1A)
  /// Timer1 gives interrupt frequency = F_CPU/(prescaler*(1+OCR1A))

  TCCR1B &= ~(1<<WGM13);
  TCCR1B |=  (1<<WGM12);
  TCCR1A &= ~(1<<WGM11);
  TCCR1A &= ~(1<<WGM10);

  // output mode = 00 (disconnected)
  TCCR1A &= ~(3<<COM1A0);
  TCCR1A &= ~(3<<COM1B0);

  // Configure Timer 2 (8 bit)
  /// Maximum reachable value = 0xFF
  /// OCRx is updated immediately
  /// TOV flag is set (interrupt occurs) on max value (0xFF)
  /// Timer2 gives interrupt frequency F_CPU/(prescaler*256)
  TCCR2A = 0; // Normal operation
  TCCR2B = 0; // Disable timer until needed (switch to 'no clock source')
  TIMSK2 |= (1<<TOIE2); // Enable Timer2 Overflow interrupt
  #ifdef STEP_PULSE_DELAY
    TIMSK2 |= (1<<OCIE2A); // Enable Timer2 Compare Match A interrupt
  #endif
*/
  // Start in the idle state, but first wake up to check for keep steppers enabled option.
  st_wake_up();
  st_go_idle();
}
